# YatSenOS

./: .gitignore  README.md  base
colored_output/src/: main.rs
first_rust_proj/first_rust_proj/: main.rs
humanizer/src/: main.rs
lab0/: lab0_report.typ
lab0/ShapeArea/shape_area/src/: main.rs
lab0/colored_output/: Cargo.toml
lab0/humanizer/: Cargo.toml
lab0/my_yatsenos_lab/crates/boot/src/: main.rs
lab0/unique_id/: Cargo.toml
lab1/: lab1_report.typ
lab1/ .vscode/: launch.json
lab1/crates/boot/src/: main.rs
lab1/crates/elf/: Cargo.toml
lab1/crates/kernel/: Cargo.toml
lab1/crates/kernel/src/: main.rs
lab1/crates/kernel/src/utils/: logger.rs
unique_id/src/: main.rs
yatsenos/: Cargo.toml  Makefile  lab2_report.typ  lab3_report.typ
yatsenos/.cargo/: config.toml
yatsenos/crates/elf/: Cargo.toml
yatsenos/crates/elf/src/: lib.rs
yatsenos/crates/kernel/.cargo/: config.toml
yatsenos/crates/kernel/config/: boot.conf
yatsenos/crates/kernel/src/: lib.rs  main.rs
yatsenos/crates/kernel/src/drivers/: input.rs  uart16550.rs
yatsenos/crates/kernel/src/interrupt/: clock.rs  exceptions.rs  mod.rs  serial.rs
yatsenos/crates/kernel/src/memory/: frames.rs  gdt.rs
yatsenos/crates/kernel/src/proc/: context.rs  manager.rs  process.rs
yatsenos/crates/kernel/src/utils/: macros.rs
yyos/: Cargo.toml  Makefile  lab1_report.typ  lab3_report.typ
yyos/ .vscode/: launch.json
yyos/crates/boot/: Cargo.toml
yyos/crates/boot/src/: main.rs
yyos/crates/elf/: Cargo.toml
yyos/crates/kernel/: Cargo.toml
yyos/crates/kernel/src/: lib.rs  main.rs
(+17 files in other folders)
