[package]
edition.workspace = true
name              = "ysos_elf"
version.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log      = { workspace = true }
x86_64   = { workspace = true }
xmas-elf = { workspace = true }

[source.crates-io]
replace-with = 'ustc'

[source.ustc]
registry = "sparse+https://mirrors.ustc.edu.cn/crates.io-index/"

[net]
git-fetch-with-cli = true